sidu-installer (0.7-1.2) unstable; urgency=low

  * Non-maintainer upload.
  * added sidu-installer.desktop file
  * added sidu-installer.svg. thxx to se7en

 -- Ferdinand Thommes <devil@siduction.org>  Thu, 24 Nov 2011 19:09:21 +0100

sidu-installer (0.7-1.1) unstable; urgency=low

  * Non-maintainer upload.
  * doc-base.Ex deleted
  * FTBFS: sudoers.d in debian/install outcommented 

 -- Alf Gaida <info@g-com.eu>  Thu, 24 Nov 2011 01:42:37 +0100

sidu-installer (0.7-1) unstable; urgency=low

  * Separation of the packet siguibui: some files are moved
  * Reduces linian errors and warnings

 -- J. Hamatoma <hamatoma@gmx.de>  Tue, 22 Nov 2011 22:37:03 +0100

sidu-installer (0.6-1) unstable; urgency=low

  * gdisk can be started
  * usb-installer can be started
  * Filter on mount devices: not rootfs and not swap
  * Filter on rootfs: not swap
  * Fix: Empty real name is now working
  * Code review: Removed unused items in parameter file
  * Code review: readPartitionInfo() will be called one time only.
  * CSS: Reduced height.

 -- J. Hamatoma <hamatoma@gmx.de>  Sun, 13 Nov 2011 23:51:25 +0100

sidu-installer (0.5-2) unstable; urgency=low

  * Workaround for Midori: blocking page wait after reaching page ready.

 -- J. Hamatoma <hamatoma@gmx.de>  Sun, 13 Nov 2011 18:57:37 +0100

sidu-installer (0.5-1) unstable; urgency=low

  * The output of the fll-installer is appended to the ready page
  * Debugging: trace can be controlled by the webserver

 -- J. Hamatoma <hamatoma@gmx.de>  Sun, 13 Nov 2011 17:23:57 +0100

sidu-installer (0.4-3) unstable; urgency=low

  * Customized text while fll-installer is running.

 -- J. Hamatoma <hamatoma@gmx.de>  Sun, 13 Nov 2011 12:58:40 +0100

sidu-installer (0.4-2) unstable; urgency=low

  * No "back" button in ready page

 -- J. Hamatoma <hamatoma@gmx.de>  Sun, 13 Nov 2011 12:13:37 +0100

sidu-installer (0.4-1) unstable; urgency=low

  * New frontend plugin: readypage.php
  * New backend plugin: reboot.sh