@@ -11,3 +11,28 @@ export DH_VERBOSE=1
 
 %:
 	dh $@ 
+
+create-icons:
+	# requires inkscape and imagemagick to be installed
+	@if [ ! -x /usr/bin/convert ]; then \
+		echo "ERROR: imagemagick not installed!" ; \
+		false ; \
+	fi
+	@if [ ! -x /usr/bin/inkscape ]; then \
+		echo "ERROR: inkscape not installed!" ; \
+		false ; \
+	fi
+	
+	# create XDG compatible icons from SVG
+	for i in 16 22 32 48 64 128; do \
+		mkdir -p "icons/hicolor/$${i}x$${i}/apps" ; \
+		inkscape --export-width=$${i} \
+			 --export-height=$${i} \
+			 --export-png="$(CURDIR)/icons/hicolor/$${i}x$${i}/apps/siduction-irc.png" \
+				$(CURDIR)/icons/siduction-irc.svg ; \
+	done
+	
+	# create XPM icons for the debian menu system
+	mkdir -p icons/pixmaps
+	convert icons/hicolor/32x32/apps/siduction-irc.png icons/pixmaps/siduction-irc.xpm
+	convert icons/hicolor/16x16/apps/siduction-irc.png icons/pixmaps/siduction-irc-16.xpm
