@@ -3,8 +3,9 @@ sidu-installer (0.7-1.2) unstable; urgency=low
   * Non-maintainer upload.
   * added sidu-installer.desktop file
   * added sidu-installer.svg. thxx to se7en
+  * modified /debian/rules to build icons
 
- -- Ferdinand Thommes <devil@siduction.org>  Thu, 24 Nov 2011 19:09:21 +0100
+ -- Ferdinand Thommes <devil@siduction.org>  Thu, 24 Nov 2011 19:16:18 +0100
 
 sidu-installer (0.7-1.1) unstable; urgency=low
 
